contextdiff: parse bigger subset of diffs

E.g. filterdiff tries to put some context info (function name,
namespace) at the line determining changed lines.  Also, it does
not have the ability to use timestamp information, so it
generates diffs without it.

BUG: 330401
FIXED-IN: 4.14.2